--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,8 @@ jobs:
       if: runner.os != 'windows'
       run: |
         go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
+        go mod edit -droprequire='github.com/flarco/gutil@v0.0.0' go.mod
+        go mod tidy
 
         export GO_BIN_FOLDER=$HOME/go/bin
         export TMPDIR=~/tmp/
@@ -53,7 +55,9 @@ jobs:
       if: runner.os == 'windows'
       run: |
         go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
-        
+        go mod edit -droprequire='github.com/flarco/gutil@v0.0.0' go.mod
+        go mod tidy
+
         setx TMPDIR "C:\Users\runneradmin\tmp"
         setx PATH "%PATH%;C:\Users\runneradmin\go\bin"
         setx GO111MODULE "auto"
