--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,14 +39,15 @@ jobs:
     - name: Prepare Build (Unix)
       if: runner.os != 'windows'
       run: |
-        go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
-        go mod edit -droprequire='github.com/flarco/gutil' go.mod
-        go mod tidy
-
         export GO_BIN_FOLDER=$HOME/go/bin
         export TMPDIR=~/tmp/
         export PATH=$GO_BIN_FOLDER:$PATH
         mkdir -p $TMPDIR
+
+        go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
+        go mod edit -droprequire='github.com/flarco/gutil' go.mod
+        go get -u github.com/flarco/gutil
+
         go get github.com/markbates/pkger/cmd/pkger
 
         pkger -include github.com/slingdata/sling/core/database:/core/database/templates -o cmd/sling
@@ -54,14 +55,14 @@ jobs:
     - name: Prepare Build (Windows)
       if: runner.os == 'windows'
       run: |
-        go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
-        go mod edit -droprequire='github.com/flarco/gutil' go.mod
-        go mod tidy
-
         setx TMPDIR "C:\Users\runneradmin\tmp"
         setx PATH "%PATH%;C:\Users\runneradmin\go\bin"
         setx GO111MODULE "auto"
         mkdir C:\Users\runneradmin\tmp
+
+        go mod edit -dropreplace='github.com/flarco/gutil@v0.0.0' go.mod
+        go mod edit -droprequire='github.com/flarco/gutil' go.mod
+        go get -u github.com/flarco/gutil
 
         go get github.com/markbates/pkger/cmd/pkger
 
