--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
 
         go get github.com/markbates/pkger/cmd/pkger
 
-        pkger -include github.com/slingdata-io/sling/core/database:/core/database/templates -o cmd/sling
+        pkger -include github.com/flarco/dbio/database:/database/templates -o cmd/sling
 
     - name: Prepare Build (Windows)
       if: runner.os == 'windows'
@@ -66,7 +66,7 @@ jobs:
 
         go get github.com/markbates/pkger/cmd/pkger
 
-        C:\Users\runneradmin\go\bin\pkger.exe -include github.com/slingdata-io/sling/core/database:/core/database/templates -o cmd/sling
+        C:\Users\runneradmin\go\bin\pkger.exe -include github.com/flarco/dbio/database:/database/templates -o cmd/sling
 
         
     - name: Build Sling (Linux)
