--- a/cmd/sling/tests/test1.yaml
+++ b/cmd/sling/tests/test1.yaml
@@ -1,12 +1,15 @@
-src_conn: testing 
-src_table: testing 
-src_file: testing 
-src_sql: testing 
-tgt_conn: testing 
-tgt_table: testing 
-tgt_file: testing 
-mode: testing 
-limit: 111 
-tgt_table_ddl: testing 
-tgt_table_tmp: testing 
-post_sql: testing
+source:
+  conn: testing
+  sql: testing
+  table: testing
+  limit: 111
+
+target:
+  conn: testing
+  url: testing
+  table: testing
+  pre_sql: testing
+  post_sql: testing
+  table_ddl: testing
+  table_tmp: testing
+  mode: testing
