--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -12,6 +12,11 @@ jobs:
   
     - name: Build
       run: |
+        go mod edit -dropreplace='github.com/flarco/g' go.mod
+        go mod edit -dropreplace='github.com/flarco/dbio' go.mod
+        go get github.com/flarco/g@HEAD
+        go get github.com/flarco/dbio@HEAD
+
         export WORK_FOLDER=/__/work/${GITHUB_RUN_NUMBER}
         mkdir -p $WORK_FOLDER
         cp -r . $WORK_FOLDER/sling
@@ -32,6 +37,11 @@ jobs:
   
     - name: Run Go Tests
       run: |
+        go mod edit -dropreplace='github.com/flarco/g' go.mod
+        go mod edit -dropreplace='github.com/flarco/dbio' go.mod
+        go get github.com/flarco/g@HEAD
+        go get github.com/flarco/dbio@HEAD
+
         source /root/.bashrc
         source /__/devbox/.env.sh
         export _DEBUG=''
