--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -16,9 +16,11 @@ jobs:
           export WORK_FOLDER=/__/work/${GITHUB_RUN_NUMBER}
           mkdir -p $WORK_FOLDER
           cp -r . $WORK_FOLDER/sling
+          mkdir $WORK_FOLDER/sling/python/sling/bin
+          chmod -R 777 $WORK_FOLDER/sling
           docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh
           /bin/cp -f $WORK_FOLDER/sling/python/sling/bin/sling-linux /__/bin/sling
-          chmod 755 /__/bin/sling
+          chmod 777 /__/bin/sling
           rm -rf $WORK_FOLDER
 
   test:
