--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -41,6 +41,7 @@ jobs:
   push:
     needs: [build-sling, test]
     runs-on: self-hosted
+    if: github.event.pull_request.merged
 
     steps:
       - name: Push Docker
@@ -62,7 +63,7 @@ jobs:
   release:
     needs: [build-sling, test]
     runs-on: ${{ matrix.os }}
-    # if: github.event.pull_request.merged
+    if: github.event.pull_request.merged
 
     strategy:
       matrix:
