--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,10 +1,9 @@
-name: Build & Test
+name: Build & Release
 
-on: [push]
+on: [workflow_dispatch]
 
 jobs:
-  build-sling:
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+  build:
     runs-on: self-hosted
 
     steps:
@@ -19,29 +18,9 @@ jobs:
           docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh
           rm -rf $WORK_FOLDER
 
-  test:
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
-
-    needs: [build-sling]
-
-    runs-on: self-hosted
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Run Go Tests
-        run: |
-          bash scripts/prep.gomod.sh
-          source /root/.bashrc
-          source /__/devbox/.env.sh
-          export _DEBUG=''
-          echo $PATH
-          bash scripts/test.sh
-
   push:
-    needs: [build-sling, test]
+    needs: [build]
     runs-on: self-hosted
-    if: github.event.pull_request.merged
 
     steps:
       - name: Push Docker
@@ -61,9 +40,8 @@ jobs:
           docker image rm -f flarco/sling:$VERSION
 
   release:
-    needs: [build-sling, test]
+    needs: [build]
     runs-on: ${{ matrix.os }}
-    if: github.event.pull_request.merged
 
     strategy:
       matrix:
